Fix spacing.

--- a/public_html/style/mobile-main.css
+++ b/public_html/style/mobile-main.css
@@ -30,28 +30,11 @@ ol, ul {
 	list-style: none;
 }
 
-blockquote, q {
-	quotes: none;
-}
-
-	blockquote:before, blockquote:after, q:before, q:after {
-		content: '';
-		content: none;
-	}
-
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
 
 body {
 	-webkit-text-size-adjust: none;
 }
 
-mark {
-	background-color: transparent;
-	color: inherit;
-}
 
 input::-moz-focus-inner {
 	border: 0;
